# X-Pose

./: pyproject.toml
src/x_pose/: __init__.py
