[project]
name = "x-pose"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Carlyn", email = "davidecarlyn@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "addict>=2.4.0",
    "gradio>=5.49.1",
    "ipdb>=0.13.13",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "pyyaml>=6.0.3",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "termcolor>=3.2.0",
    "timm>=1.0.22",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
    "yapf>=0.43.0",
]

[project.scripts]
x-pose = "x_pose:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
